@@ -8,6 +8,10 @@ def description = ' Api Teste CI / CD'
 def user='root'
 def execStart="java -jar ${installDir+projectName}/target/${fileName} ${javaOpts}"
 def serviceFile = "/etc/systemd/system/${projectName}.service"
+def envOpts = """
+                    export JDK_JAVA_OPTIONS="--add-opens java.base/java.lang=com.google.guice,javassist"
+                    export MAVEN_OPTS="-Xms256M -Xmx1024M -XX:MaxPermSize=350m -XX:MaxDirectMemorySize=1024m"
+              """
 
 pipeline {
     agent any
@@ -18,8 +22,9 @@ pipeline {
                 sh "rm -rf ${projectName}"
                 sh "rm -rf ${installDir+projectName}"
                 sh "rm -rf ${installDir+projectName}@tmp"
+                sh "rm -rf /var/lib/jenkins/.m2/repository"
                 sh """
-                    export MAVEN_OPTS="-Xms256M -Xmx1024M -XX:MaxPermSize=350m -XX:MaxDirectMemorySize=1024m"
+                    ${envOpts}
                     if [ ! -d '${installDir}' ]; then
                             mkdir -p ${installDir}
                     fi
@@ -40,6 +45,8 @@ pipeline {
             echo "Moving to ${installDir}";
             sh "mv ${projectName} ${installDir}"; 
             dir("${installDir+projectName}"){
+                sh 'mvn help:evaluate -Dexpression=settings.localRepository'
+                sh 'mvn --version'
                 sh 'mvn clean'
                 }
             }
@@ -48,6 +55,7 @@ pipeline {
         stage('Test'){
             steps{
              dir("${installDir+projectName}"){
+                    sh "${envOpts}"
                     echo ' Testes Unitários Maven ';
                     sh ' mvn test'
                 }
@@ -58,7 +66,8 @@ pipeline {
             steps {
                 dir("${installDir+projectName}"){
                     echo 'iniciando o build da aplicação ';
-                    sh 'mvn clean install'
+                    sh "${envOpts}"
+                    sh 'mvn clean install -Dskiptests=true'
                 }     
             }
         }
